fixed use of a JDK 9+ feature in a project that is (implicitly) JDK 8